# nexus-notarized-ai-execution

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NEXUS_BUILD_SPEC.md  NEXUS_WORKFLOW_SPEC.md  README.md  SECURITY.md  alembic.ini  docker-compose.quickstart.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 562afbed6c98_v2_workflows_triggers_credentials.py
docs/: api-reference.md  architecture.md  comparison.md  philosophy.md  quickstart.md
docs/tutorials/: first-agent.md
examples/code_review/: main.py
examples/custom_tool/: main.py
examples/customer_support/: main.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.js
nexus/: __init__.py  config.py  exceptions.py  types.py
nginx/: nexus.conf
scripts/: test_li_real.py
tests/: conftest.py  test_anomaly.py  test_api.py  test_api_sse.py  test_api_v2.py  test_auth_rate_limiter.py  test_builtin_tools.py  test_cache.py  test_code_sandbox.py  test_core_deep.py  test_credentials.py  test_dag_engine.py  test_e2e_invariants.py  test_engine.py  test_engine_phase17.py  test_frontend_contracts.py  test_http_tool.py  test_knowledge.py  test_llm.py  test_llm_routing.py  test_mcp.py  test_persona_id_consistency.py  test_phase15_workflow_types.py  test_phase17_applied.py  test_phase18_credentials.py  test_phase19_mcp.py  test_phase20_http_data.py  test_phase21_sandbox_v2.py  test_phase22_triggers.py  test_phase23_1_ambiguity.py  test_phase23_nl_workflow_gen.py  test_phase25_backend.py  test_phase26_background.py  test_phase27_marketplace.py  test_phase28_persistence_v2.py  test_phase29_api_v2.py  test_rag_integration.py  test_reasoning.py  test_repository.py  test_sales_growth_orchestrator.py  (+13 more)
(+261 files in other folders)
