[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus"
version = "0.1.0"
description = "NEXUS — Notarized AI Execution. The agent framework where AI actions are accountable."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "chromadb>=0.4.22",
    "litellm>=1.30.0",
    "sentence-transformers>=2.3.0",
    "PyJWT>=2.8.0",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "mcp>=1.0.0",
    "jmespath>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "httpx[http2]",
]

[project.scripts]
nexus = "nexus.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # Our intentional insecure-default warning is noise in tests
    "ignore::UserWarning:nexus.config",
    # PyJWT warns when test demo key < 32 bytes
    "ignore::jwt.InsecureKeyLengthWarning",
    # pydantic and SQLAlchemy call datetime.utcnow() internally; not our code to fix
    "ignore::DeprecationWarning:pydantic",
    "ignore::DeprecationWarning:sqlalchemy",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
implicit_optional = true
